syntax = "proto3";

package booking;

service BookingService {
  // Create a new booking
  rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);

  // Get details of an existing booking
  rpc GetBooking(GetBookingRequest) returns (GetBookingResponse);

  // Update an existing booking
  rpc UpdateBooking(UpdateBookingRequest) returns (UpdateBookingResponse);

  // Cancel an existing booking
  rpc CancelBooking(CancelBookingRequest) returns (Empty);

  // List all bookings for a given customer
  rpc ListCustomerBookings(ListCustomerBookingsRequest)
      returns (ListCustomerBookingsResponse);

  rpc CreateRooms(CreateRoomsRequest) returns (Empty);

  // Get available room types and details
  rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse);

  // Create a new hotel entry
  rpc CreateHotelEntry(CreateHotelEntryRequest)
      returns (CreateHotelEntryResponse);

  // Update an existing hotel entry
  rpc UpdateHotelEntry(UpdateHotelEntryRequest)
      returns (UpdateHotelEntryResponse);
}

message Empty {

}

message CreateRoomsRequest {
  repeated CreateRoomsInner rooms = 1;
}

message CreateRoomsInner {
  int64 hotel_id = 1;
  int32 room_number = 2;
  int32 room_type = 3;
  double price_per_night = 4;
}

message CreateBookingRequest {
  string customer_name = 1;
  string customer_email = 2;
  int64 room_id = 3;
  string check_in_date = 4;
  string check_out_date = 5;
  int32 num_guests = 6;
  int64 transaction_id = 7;
}

message CreateBookingResponse {
  int64 booking_id = 1;
}

message GetBookingRequest {
  int64 booking_id = 1;
}

message GetBookingResponse {
  int64 booking_id = 1;
  string customer_name = 2;
  string customer_email = 3;
  int64 room_id = 4;
  string check_in_date = 5;
  string check_out_date = 6;
  int32 num_guests = 7;
  bool cancelled = 8;
  int64 transaction_id = 9;
  int32 room_number = 10;
}

message GetRoomsRequest { 
  int64 hotel_id = 1; 
  string check_in_date = 2;
  string check_out_date = 3;
}

message GetRoomsResponse { 
  repeated RoomInfo rooms = 1; 
}

message UpdateBookingRequest {
  int64 booking_id = 1;
  optional string customer_name = 2;
  optional string customer_email = 3;
  optional int64 room_id = 4;
  optional string check_in_date = 5;
  optional string check_out_date = 6;
  optional int32 num_guests = 7;
  optional bool cancelled = 8;
}

message UpdateBookingResponse {
  int64 booking_id = 1;
}

message CancelBookingRequest {
  int64 booking_id = 1;
}

message ListCustomerBookingsRequest {
  string customer_email = 1;
  int64 hotel_id = 2;
}

message ListCustomerBookingsResponse {
  repeated GetBookingResponse bookings = 1;
}

message RoomInfo {
  int64 room_id = 1;
  int32 room_number = 2;
  int64 hotel_id = 3;
  string room_type = 4;
  double price_per_night = 5;
  bool available = 6;
}

message CreateHotelEntryRequest {
  string hotel_name = 1;
  int32 total_rooms = 2;
  int32 room_types = 3;
  string address = 4;
  string phone = 5;
  string website = 6;
}

message CreateHotelEntryResponse { 
  int64 hotel_id = 1; 
}

message UpdateHotelEntryRequest {
  int64 hotel_id = 1;
  optional int32 total_rooms = 2;
  optional int32 room_types = 3;
  optional string address = 4;
  optional string phone = 5;
  optional string website = 6;
}

message UpdateHotelEntryResponse { 
  int64 hotel_id = 1; 
}